# rusthcode

TESTES_VARIADOS/: Cargo.toml
TESTES_VARIADOS/src/: main.rs
s1055_colecoes_vector/: Cargo.toml
s1055_colecoes_vector/src/: main.rs
s1056_clecoes_string/: Cargo.toml
s1056_clecoes_string/src/: main.rs
s1057_colecoes_hash_map/: Cargo.toml
s1057_colecoes_hash_map/src/: main.rs
s1159_criando_arquivos/: .gitconfig  Cargo.toml  hcode.txt
s1159_criando_arquivos/src/: arquivo.rs  main.rs
s1160_ler_arquivo/: Cargo.toml
s1160_ler_arquivo/src/: arquivo.rs  main.rs
s1162_lendo_diretorio/: Cargo.toml
s1162_lendo_diretorio/src/: arquivo.rs  main.rs
s18_projeto/: Cargo.toml
s212_constante/: Cargo.toml
s214_conversao_casting/: Cargo.toml
s317_exemplos_funcoes/: Cargo.toml
s318_retorno_bloco_codigo/: Cargo.toml
s319_funcoes_parametros_mutaveis/: Cargo.toml
s421_if/: Cargo.toml
s422_declaracao_if/: Cargo.toml
s423_loop/: Cargo.toml
s424_While/: Cargo.toml
s425_for/: Cargo.toml
s426_match/: Cargo.toml
s528_enum/: Cargo.toml
s529_enum_val_associativos/: Cargo.toml
s530_struct/: Cargo.toml
s531_struct/: Cargo.toml
s532_traits/: Cargo.toml
s738_panics_error/: Cargo.toml
s739_result_type/: Cargo.toml
s740_option_type/: Cargo.toml
s843_modulos_mesmo_arquivo/: Cargo.toml
s844_modulos_arquivo_separado/: Cargo.toml
s845_modulos_em_subpastas/: Cargo.toml
s847_criando_multiplos_binarios/: Cargo.toml
s949_criando_biblioteca/: Cargo.toml
s949_criando_biblioteca/src/: lib.rs
s952_usando_biblioteca/: Cargo.toml
(+24 files in other folders)
